--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,13 +1,34 @@
+@font-face {
+  font-family: 'Futura Light';
+  src: url("fonts/Futura (Light).ttf"); }
+@font-face {
+  font-family: 'Harriet Regular';
+  src: url("fonts/Harriet Display Regular.otf"); }
+@font-face {
+  font-family: 'Harriet Bold';
+  src: url("fonts/Harriet Display Bold.otf"); }
 header {
-  width: 100%; }
+  width: 100%;
+  height: 100px; }
+
+.nav-top__menu {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: stretch;
+  float: right;
+  height: 100%;
+  text-align: center;
+  list-style-type: none; }
   @media only screen and (max-width: 64em) {
-    header {
-      background-color: green; } }
+    .nav-top__menu {
+      width: 60%; } }
   @media only screen and (min-width: 79em) and (max-width: 90em) {
-    header {
-      background-color: blue; } }
+    .nav-top__menu {
+      width: 40%; } }
   @media only screen and (min-width: 90em) {
-    header {
-      background-color: red; } }
+    .nav-top__menu {
+      width: 30%; } }
+.nav-top__menu-item {
+  flex: 1; }
 
 /*# sourceMappingURL=style.css.map */
