--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -1,5 +1,14 @@
-$browser-context: 16;
+@font-face {
+    font-family: 'Futura Light';
+    src: url('fonts/Futura (Light).ttf'); }
+@font-face {
+	font-family: 'Harriet Regular';
+	src: url('fonts/Harriet Display Regular.otf'); }
+@font-face {
+	font-family: 'Harriet Bold';
+	src: url('fonts/Harriet Display Bold.otf'); }
 
+$browser-context: 16;
 @function em($pixels, $context: $browser-context) {
   @return #{$pixels/$context}em;
 }
@@ -22,17 +31,56 @@ $xlarge-breakpoint: em(1920) !default;
   }
 }
 
+//Copy / Paste for responsive styles
+
+// @include respond-to(handhelds) {
+// }
+// @include respond-to(medium-screens) {
+// }
+// @include respond-to(wide-screens) {
+// }
+
+body {
+
+}
+
 header {
   width: 100%;
+  height: 100px;
   @include respond-to(handhelds) {
-  	background-color: green;
+  	// height: 100px;
   }
   @include respond-to(medium-screens) {
-  	background-color: blue;
+  	// height: 125px;
   }
   @include respond-to(wide-screens) {
-  	background-color: red;
+  	// height: 150px;
   }
+}
+
+.nav-top {
+	&__menu {
+		display: flex;
+		flex-wrap: nowrap;
+		align-items: stretch;
+		float: right;
+		height: 100%;
+		text-align: center;
+		list-style-type: none;
+		@include respond-to(handhelds) {
+			width: 60%;
+		}
+		@include respond-to(medium-screens) {
+			width: 40%;
+		}
+		@include respond-to(wide-screens) {
+			width: 30%;
+		}
+	}
+
+	&__menu-item {
+		flex: 1;
+	}
 }
 
 // @media screen 
