--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,34 +1,43 @@
 @font-face {
   font-family: 'Futura Light';
-  src: url("fonts/Futura (Light).ttf"); }
+  src: url("../fonts/Futura (Light).ttf"); }
 @font-face {
   font-family: 'Harriet Regular';
-  src: url("fonts/Harriet Display Regular.otf"); }
+  src: url("../fonts/Harriet Display Regular.otf"); }
 @font-face {
   font-family: 'Harriet Bold';
-  src: url("fonts/Harriet Display Bold.otf"); }
+  src: url("../fonts/Harriet Display Bold.otf"); }
+body {
+  box-sizing: border-box; }
+
 header {
   width: 100%;
   height: 100px; }
 
-.nav-top__menu {
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: stretch;
-  float: right;
+.nav-top {
   height: 100%;
-  text-align: center;
-  list-style-type: none; }
-  @media only screen and (max-width: 64em) {
-    .nav-top__menu {
-      width: 60%; } }
-  @media only screen and (min-width: 79em) and (max-width: 90em) {
-    .nav-top__menu {
-      width: 40%; } }
-  @media only screen and (min-width: 90em) {
-    .nav-top__menu {
-      width: 30%; } }
-.nav-top__menu-item {
-  flex: 1; }
+  font-family: "Futura Light";
+  font-size: 1.4em; }
+  .nav-top__menu {
+    margin: 0 20px 0 0;
+    height: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: stretch;
+    float: right;
+    text-align: center;
+    list-style-type: none; }
+    @media only screen and (max-width: 64em) {
+      .nav-top__menu {
+        width: 60%; } }
+    @media only screen and (min-width: 79em) and (max-width: 90em) {
+      .nav-top__menu {
+        width: 45%; } }
+    @media only screen and (min-width: 90em) {
+      .nav-top__menu {
+        width: 30%; } }
+  .nav-top__menu-item {
+    margin: auto 0 auto 0;
+    flex: 1; }
 
 /*# sourceMappingURL=style.css.map */
