--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -1,12 +1,12 @@
 @font-face {
     font-family: 'Futura Light';
-    src: url('fonts/Futura (Light).ttf'); }
+    src: url('../fonts/Futura (Light).ttf'); }
 @font-face {
 	font-family: 'Harriet Regular';
-	src: url('fonts/Harriet Display Regular.otf'); }
+	src: url('../fonts/Harriet Display Regular.otf'); }
 @font-face {
 	font-family: 'Harriet Bold';
-	src: url('fonts/Harriet Display Bold.otf'); }
+	src: url('../fonts/Harriet Display Bold.otf'); }
 
 $browser-context: 16;
 @function em($pixels, $context: $browser-context) {
@@ -18,6 +18,9 @@ $small-breakpoint: em(1024) !default;
 $medium-breakpoint:  em(1264) !default;
 $large-breakpoint:  em(1440) !default;
 $xlarge-breakpoint: em(1920) !default;
+
+$body-font: 'Futura Light';
+$header-font: 'Harriet Bold';
 
 @mixin respond-to($media) {
   @if $media == handhelds {
@@ -41,37 +44,32 @@ $xlarge-breakpoint: em(1920) !default;
 // }
 
 body {
-
+	box-sizing: border-box;
 }
 
 header {
   width: 100%;
   height: 100px;
-  @include respond-to(handhelds) {
-  	// height: 100px;
-  }
-  @include respond-to(medium-screens) {
-  	// height: 125px;
-  }
-  @include respond-to(wide-screens) {
-  	// height: 150px;
-  }
 }
 
 .nav-top {
+	height: 100%;
+	font-family: $body-font;
+	font-size: 1.4em;
 	&__menu {
+		margin: 0 20px 0 0;
+		height: 100%;
 		display: flex;
 		flex-wrap: nowrap;
 		align-items: stretch;
 		float: right;
-		height: 100%;
 		text-align: center;
 		list-style-type: none;
 		@include respond-to(handhelds) {
 			width: 60%;
 		}
 		@include respond-to(medium-screens) {
-			width: 40%;
+			width: 45%;
 		}
 		@include respond-to(wide-screens) {
 			width: 30%;
@@ -79,6 +77,7 @@ header {
 	}
 
 	&__menu-item {
+		margin: auto 0 auto 0;
 		flex: 1;
 	}
 }
